--- a/css/estilo.css
+++ b/css/estilo.css
@@ -54,6 +54,7 @@
 .container-titulo .titulos {
   margin-top: 50px;
   margin-bottom: 50px;
+  text-align: center;
 }
 
 .container-sinopse {
@@ -69,8 +70,22 @@
 .container-marketing {
 }
 
+.container-marketing .button-comprar {
+  position: relative;
+  padding: 10px;
+  background-color: rgb(212, 209, 209);
+  top: 25px;
+  text-decoration: none;
+  border-radius: 5px;
+}
+
 .footer {
+  height: 300px;
   position: relative;
   top: 360px;
-  margin: 25px 25px;
+  display: flex;
+  justify-content: space-around;
+  padding: 15px;
+  background-color: rgb(0, 0, 0);
+  color: white;
 }
