--- a/css/estilo.css
+++ b/css/estilo.css
@@ -49,9 +49,13 @@
 
 .container-titulo .imagem-livro {
   border-radius: 5px;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
-.container-titulo .titulos {
+.container-titulo,
+.container-sinopse,
+.container-sinopse .titulos {
   margin-top: 50px;
   margin-bottom: 50px;
   text-align: center;
@@ -70,7 +74,7 @@
 .container-marketing {
 }
 
-.container-marketing .button-comprar {
+.button-comprar {
   position: relative;
   padding: 10px;
   background-color: rgb(212, 209, 209);
@@ -84,8 +88,26 @@
   position: relative;
   top: 360px;
   display: flex;
-  justify-content: space-around;
+  flex-flow: row nowrap;
+  justify-content: space-evenly;
   padding: 15px;
   background-color: rgb(0, 0, 0);
   color: white;
+}
+
+.footer .footer-itens {
+  padding: 10px;
+  margin: 25px 25px;
+}
+
+.footer .footer-itens p {
+  text-align: center;
+  padding: 15px;
+}
+
+.footer .autoria {
+  position: absolute;
+  color: white;
+  text-decoration: none;
+  top: 300px;
 }
