--- a/css/estilo.css
+++ b/css/estilo.css
@@ -5,6 +5,38 @@
   margin: 0 0 auto;
 }
 
+/* max-width 
+
+Se a tela tiver menos que 600px, ou seja 600px pra baixa ( valor < 600px )
+
+*/
+
+
+@media screen and (max-width: 600px) {
+
+  .menu-principal {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .cards, .newsletter, .footer {
+    flex-flow: column nowrap !important;
+    align-items: center;
+  }
+  
+}
+
+/* min-width */
+@media screen and (min-width: 900px) {
+
+}
+
+/* min & max-width */
+@media screen and (max-width: 600px) and (min-width: 900px) {
+
+}
+
 .menu-principal {
   position: fixed;
   display: flex;
