--- a/css/estilo.css
+++ b/css/estilo.css
@@ -3,6 +3,17 @@
 * {
   font-family: "Montserrat", sans-serif;
   margin: 0 0 auto;
+  line-height: 1.6;
+}
+
+h1, 
+h2, 
+h3, 
+h4, 
+h5,
+h6 {
+  line-height: 1.2;
+  color: #444;
 }
 
 .menu-principal {
