--- a/css/estilo.css
+++ b/css/estilo.css
@@ -19,7 +19,7 @@ h6 {
 .menu-principal {
   position: fixed;
   display: flex;
-  width: 100%;
+  width: 99.5%;
   background-color: rgb(212, 209, 209);
   padding: 10px;
   justify-content: space-around;
@@ -53,9 +53,9 @@ h6 {
   top: 180px;
   position: relative;
   margin: 25px 25px;
-  width: 300px;
   display: flex;
   flex-flow: row nowrap;
+  justify-content: center;
 }
 
 .cards .livro {
@@ -139,7 +139,7 @@ h6 {
 }
 
 .footer {
-  height: 300px;
+  height: 40vh;
   position: relative;
   top: 250px;
   display: flex;
@@ -148,6 +148,7 @@ h6 {
   padding: 15px;
   background-color: rgb(0, 0, 0);
   color: white;
+  align-items: center;
 }
 
 .footer .footer-itens {
