--- a/css/estilo.css
+++ b/css/estilo.css
@@ -138,17 +138,17 @@ h6 {
   color: white;
 }
 
-.footer {
-  height: 40vh;
+.inner-footer {
+  height: 75%;
   position: relative;
   top: 250px;
   display: flex;
-  flex-flow: row nowrap;
+  flex-flow: row wrap;
   justify-content: space-evenly;
   padding: 15px;
   background-color: rgb(0, 0, 0);
   color: white;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .footer .footer-itens {
@@ -162,9 +162,13 @@ h6 {
   padding: 15px;
 }
 
-.footer .autoria {
-  position: absolute;
+.autoria {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: flex-end;
+  position: relative;
   color: white;
   text-decoration: none;
-  top: 300px;
+
 }
